--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,11 @@ body {
 
 .logo {
     --logo-size: calc(var(--index) * 7.8);
-    width: calc var(--logo-size);
-    height: calc var(--logo-size);
+    width: var(--logo-size);
+    height: var(--logo-size);
+    background-image: url(/img/logo-src.svg);
     background-repeat: no-repeat;
+    background-size: contain;
     position: absolute;
     left: calc(50% - calc(var(--logo-size) / 2));
     top: calc (var(--index) * 2.8);
